[project]
name = "run-tracker-app-be"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.3",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
